rt/test/errors/deps/m2.volt
module m2;

private fn add(a: i32, b: i32) i32
{
	return a + b;
}

alias pubadd = add;
